# CSC369

./: README.md
A1/A1/: INFO.txt  interceptor.c
A2/A2/: INFO.txt  executor  executor.c  job_list.txt  jobs.c
A3/: CMakeLists.txt
A3/A3/: INFO.txt  arc.c  clock.c  fifo.c  lru.c  pagetable.c  pagetable.h  sim  sim.c
A3/A3/traceprogs/: blocked  matmul  simpleloop  tr-blocked.ref  tr-matmul.ref  tr-random.ref  tr-simpleloop.ref
A4/: .gitignore  .required.json  CMakeLists.txt
A4/A4/: INFO.txt  Synch.txt  plagiarism.txt
